@@ -61,6 +61,9 @@ FIX      Fix "launching app not found lnk_launcher_app" error in Windows LNK lau
 
 FIX      Remove setContent() old code.
 
+FIX      Fixed the case of removing all categories and having just standalone launcher on addon 
+         root.
+
 
 [B]Advanced Emulator Launcher | version 0.9.4 | 16 October 2016[/B]
 
